--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,16 @@
 
 .App-link {
   color: #61dafb;
+  text-decoration: none;
+}
+.ul-style{
+  display: flex;
+}
+.li-style{
+  list-style-type: none;
+  width: 200px;
+  padding: 5px;
+  border: 1px solid gray;
 }
 
 @keyframes App-logo-spin {
